--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
             <div class="cards">
                 <a href="restaurant.html" class="card">
-                    <img src="/img/image.jpg" alt="image" class="card-image">
+                    <img src="img/image.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title">Пицца плюс</h3>
@@ -55,7 +55,7 @@
                         <!-- /.card-heding -->
                         <div class="card-info">
                             <div class="rating">
-                                <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                                <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                             </div>
                             <div class="price">От 900 ₽</div>
                             <div class="category">Пицца</div>
@@ -67,7 +67,7 @@
                 <!-- /.card -->
 
                 <a href="restaurant.html" class="card">
-                    <img src="/img/image1.jpg" alt="image" class="card-image">
+                    <img src="img/image1.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title">Тануки</h3>
@@ -76,7 +76,7 @@
                         <!-- /.card-heding -->
                         <div class="card-info">
                             <div class="rating">
-                                <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                                <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                             </div>
                             <div class="price">От 799 ₽</div>
                             <div class="category">Суши</div>
@@ -88,7 +88,7 @@
                 <!-- /.card -->
 
                 <a href="restaurant.html" class="card">
-                    <img src="/img/image2.jpg" alt="image" class="card-image">
+                    <img src="img/image2.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title">FoodBand</h3>
@@ -97,7 +97,7 @@
                         <!-- /.card-heding -->
                         <div class="card-info">
                             <div class="rating">
-                                <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                                <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                             </div>
                             <div class="price">От 999 ₽</div>
                             <div class="category">Пицца</div>
@@ -109,7 +109,7 @@
                 <!-- /.card -->
 
                 <a href="restaurant.html" class="card">
-                    <img src="/img/image3.jpg" alt="image" class="card-image">
+                    <img src="img/image3.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title">Вкусные суши</h3>
@@ -118,7 +118,7 @@
                         <!-- /.card-heding -->
                         <div class="card-info">
                             <div class="rating">
-                                <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                                <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                             </div>
                             <div class="price">От 959 ₽</div>
                             <div class="category">Суши</div>
@@ -130,7 +130,7 @@
                 <!-- /.card -->
 
                 <a href="restaurant.html" class="card">
-                    <img src="/img/image4.jpg" alt="image" class="card-image">
+                    <img src="img/image4.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title">Точка еды</h3>
@@ -139,7 +139,7 @@
                         <!-- /.card-heding -->
                         <div class="card-info">
                             <div class="rating">
-                                <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                                <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                             </div>
                             <div class="price">От 899 ₽</div>
                             <div class="category">Русская,Европейская кухня</div>
@@ -151,7 +151,7 @@
                 <!-- /.card -->
 
                 <a href="restaurant.html" class="card">
-                    <img src="/img/image5.jpg" alt="image" class="card-image">
+                    <img src="img/image5.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title">PizzaBurger</h3>
@@ -160,7 +160,7 @@
                         <!-- /.card-heding -->
                         <div class="card-info">
                             <div class="rating">
-                                <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                                <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                             </div>
                             <div class="price">От 850 ₽</div>
                             <div class="category">Пицца</div>
