--- a/restaurant.html
+++ b/restaurant.html
@@ -48,7 +48,7 @@
             </section>
             <div class="cards">
                 <div class="card wow fadeInUp" Data-wow-delay="0.2s">
-                    <img src="/img/tanuki.jpg" alt="image" class="card-image">
+                    <img src="img/tanuki.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
@@ -61,7 +61,7 @@
                         <div class="card-buttons">
                             <button class="button button-primary">
                                 <span class="button-card-text">В корзину</span>
-                                <img src="/img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
+                                <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
                             <strong class="card-price-bold">250 ₽</strong>
                         </div>
@@ -71,7 +71,7 @@
                 <!-- /.card -->
 
                 <div class="card wow fadeInUp" Data-wow-delay="0.4s">
-                    <img src="/img/tanuki1.jpg" alt="image" class="card-image">
+                    <img src="img/tanuki1.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title card-title-reg">Калифорния лосось</h3>
@@ -85,7 +85,7 @@
                         <div class="card-buttons">
                             <button class="button button-primary">
                                 <span class="button-card-text">В корзину</span>
-                                <img src="/img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
+                                <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
                             <strong class="card-price-bold">250 ₽</strong>
                         </div>
@@ -95,7 +95,7 @@
                 <!-- /.card -->
 
                 <div class="card wow fadeInUp" Data-wow-delay="0.6s">
-                    <img src="/img/tanuki2.jpg" alt="image" class="card-image">
+                    <img src="img/tanuki2.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title card-title-reg">Окинава стандарт</h3>
@@ -109,7 +109,7 @@
                         <div class="card-buttons">
                             <button class="button button-primary">
                                 <span class="button-card-text">В корзину</span>
-                                <img src="/img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
+                                <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
                             <strong class="card-price-bold">250 ₽</strong>
                         </div>
@@ -119,7 +119,7 @@
                 <!-- /.card -->
 
                 <div class="card wow fadeInUp" Data-wow-delay="0.8s">
-                    <img src="/img/tanuki3.jpg" alt="image" class="card-image">
+                    <img src="img/tanuki3.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title card-title-reg">Цезарь маки хL</h3>
@@ -133,7 +133,7 @@
                         <div class="card-buttons">
                             <button class="button button-primary">
                                 <span class="button-card-text">В корзину</span>
-                                <img src="/img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
+                                <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
                             <strong class="card-price-bold">250 ₽</strong>
                         </div>
@@ -143,7 +143,7 @@
                 <!-- /.card -->
 
                 <div class="card wow fadeInUp" Data-wow-delay="1s">
-                    <img src="/img/tanuki4.jpg" alt="image" class="card-image">
+                    <img src="img/tanuki4.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title card-title-reg">Ясай маки стандарт 185 г</h3>
@@ -157,7 +157,7 @@
                         <div class="card-buttons">
                             <button class="button button-primary">
                                 <span class="button-card-text">В корзину</span>
-                                <img src="/img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
+                                <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
                             <strong class="card-price-bold">250 ₽</strong>
                         </div>
@@ -167,7 +167,7 @@
                 <!-- /.card -->
 
                 <div class="card wow fadeInUp" Data-wow-delay="1.2s">
-                    <img src="/img/tanuki5.jpg" alt="image" class="card-image">
+                    <img src="img/tanuki5.jpg" alt="image" class="card-image">
                     <div class="card-text">
                         <div class="card-heading">
                             <h3 class="card-title card-title-reg">Ролл с креветкой стандарт</h3>
@@ -181,7 +181,7 @@
                         <div class="card-buttons">
                             <button class="button button-primary">
                                 <span class="button-card-text">В корзину</span>
-                                <img src="/img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
+                                <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
                             <strong class="card-price-bold">250 ₽</strong>
                         </div>
@@ -197,7 +197,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-block">
-                <img src="/img/logo.svg" alt="logo" class="logo footer-logo">
+                <img src="img/logo.svg" alt="logo" class="logo footer-logo">
                 <nav class="footer-nav">
                     <a href="#" class="footer-link">Ресторанам</a>
                     <a href="#" class="footer-link">Курьерам</a>
@@ -279,8 +279,8 @@
         </div>
         <!-- /.modal-dialog -->
     </div>
-    <script src="/js/wow.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
