--- a/restaurant.html
+++ b/restaurant.html
@@ -205,9 +205,9 @@
                     <a href="#" class="footer-link">Контакты</a>
                 </nav>
                 <div class="social-link">
-                    <a href="#" class="social-link"><img src="/img/instagram.svg" alt="instagram"></a>
-                    <a href="#" class="social-link"><img src="/img/fb.svg" alt="facebook"></a>
-                    <a href="#" class="social-link"><img src="/img/vk.svg" alt="vk"></a>
+                    <a href="#" class="social-link"><img src="img/instagram.svg" alt="instagram"></a>
+                    <a href="#" class="social-link"><img src="img/fb.svg" alt="facebook"></a>
+                    <a href="#" class="social-link"><img src="img/vk.svg" alt="vk"></a>
                 </div>
             </div>
         </div>
