--- a/restaurant.html
+++ b/restaurant.html
@@ -39,7 +39,7 @@
                     <h2 class="section-title">Тануки</h2>
                     <div class="card-info">
                         <div class="rating">
-                            <img src="/img/rating.svg" alt="rating" class="rating-star"> 4.5
+                            <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                         </div>
                         <div class="price">От 900 ₽</div>
                         <div class="category">Суши</div>
