--- a/restaurant.html
+++ b/restaurant.html
@@ -42,7 +42,7 @@
                             <img src="img/rating.svg" alt="rating" class="rating-star"> 4.5
                         </div>
                         <div class="price">От 900 ₽</div>
-                        <div class="category">Суши</div>
+                        <div class="category">Пицца и суши</div>
                     </div>
                 </div>
             </section>
@@ -87,7 +87,7 @@
                                 <span class="button-card-text">В корзину</span>
                                 <img src="img/shopping-cart-white.svg" alt="shopping-cart" class="button-card-image">
                             </button>
-                            <strong class="card-price-bold">250 ₽</strong>
+                            <strong class="card-price-bold">395 ₽</strong>
                         </div>
                     </div>
                     <!-- /.card-text -->
