--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-block">
-                <img src="/img/logo.svg" alt="logo" class="logo footer-logo wow fadeInRight" Data-wow-delay="0.6s">
+                <img src="img/logo.svg" alt="logo" class="logo footer-logo wow fadeInRight" Data-wow-delay="0.6s">
                 <nav class="footer-nav">
                     <a href="#" class="footer-link">Ресторанам</a>
                     <a href="#" class="footer-link">Курьерам</a>
